--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,28 +10,46 @@
   },
   "dependencies": {
     "@headlessui/react": "^1.7.17",
-    "@types/node": "20.4.6",
-    "@types/react": "18.2.18",
-    "@types/react-dom": "18.2.7",
+    "@reduxjs/toolkit": "^2.0.1",
+    "@svgr/webpack": "^8.1.0",
+    "async-mutex": "^0.4.0",
     "autoprefixer": "10.4.14",
-    "eslint": "8.46.0",
-    "eslint-config-next": "13.4.12",
+    "axios": "^1.6.2",
+    "cookies-next": "^4.1.0",
+    "date-fns": "^2.30.0",
     "next": "13.4.12",
-    "postcss": "8.4.27",
-    "postcss-calc": "^9.0.1",
-    "postcss-import": "^15.1.0",
+    "next-redux-wrapper": "^8.1.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-full-screen": "^1.1.1",
+    "react-hook-form": "^7.48.2",
+    "react-hot-toast": "^2.4.1",
     "react-parallax-mouse": "^2.1.0",
+    "react-redux": "^8.1.3",
     "react-select": "^5.8.0",
+    "redux": "^5.0.0",
+    "redux-logger": "^3.0.6",
     "tailwind-scrollbar": "^3.0.5",
     "tailwindcss": "3.3.3",
-    "typescript": "5.1.6"
+    "typescript": "5.1.6",
+    "yup": "^1.3.2"
   },
   "devDependencies": {
-    "@svgr/webpack": "^8.0.1",
+    "@types/node": "^20.10.3",
+    "@types/react": "^18.2.42",
+    "@types/react-dom": "^18.2.17",
+    "@types/react-redux": "^7.1.32",
+    "@types/redux": "^3.6.0",
+    "@typescript-eslint/eslint-plugin": "^6.13.2",
+    "@typescript-eslint/parser": "^6.13.2",
+    "dotenv": "^16.3.1",
+    "eslint": "^8.55.0",
+    "eslint-config-next": "^14.0.3",
+    "eslint-config-prettier": "^9.1.0",
+    "postcss": "^8.4.32",
+    "postcss-calc": "^9.0.1",
     "postcss-cli": "^10.1.0",
+    "postcss-import": "^15.1.0",
     "typedoc": "^0.25.3"
   }
 }
