--- a/server/package.json
+++ b/server/package.json
@@ -6,15 +6,32 @@
   "prisma": {
     "seed": "ts-node prisma/seed.ts"
   },
+  "scripts": {
+    "develop": "dotenv -e ../.env -- npx ts-node-dev --rs --clear --exit-child src/server.ts",
+    "build": "dotenv -e ../.env -- npx tsc",
+    "start": "node dist/server.js",
+    "migrate:create": "dotenv -e ../.env -- npx prisma migrate dev --name init"
+  },
   "dependencies": {
     "@prisma/client": "^5.6.0",
+    "@types/jsonwebtoken": "^9.0.5",
+    "bcrypt": "^5.1.1",
+    "cors": "^2.8.5",
     "dotenv": "^16.3.1",
+    "dotenv-cli": "^7.3.0",
     "hyper-express": "^6.14.3",
+    "hyper-express-session": "^1.1.5",
+    "jsonwebtoken": "^9.0.2",
     "module-alias": "^2.2.3"
   },
   "devDependencies": {
+    "@types/bcrypt": "^5.0.2",
+    "@types/cors": "^2.8.17",
+    "@types/module-alias": "^2.0.4",
     "@types/node": "^20.10.0",
     "prisma": "^5.6.0",
+    "ts-node": "^10.9.1",
+    "ts-node-dev": "^2.0.0",
     "typescript": "^5.3.2"
   },
   "_moduleAliases": {
