--- a/server/Dockerfile
+++ b/server/Dockerfile
@@ -8,6 +8,12 @@ RUN npm ci
 
 COPY . .
 
+# RUN npm run migrate:build -y
+
+# RUN npm run migrate:push -y
+
+# RUN npm run seed
+
 RUN npm run build
 
 CMD ["npm", "run", "start"]
