--- a/server/package.json
+++ b/server/package.json
@@ -2,15 +2,16 @@
   "name": "server",
   "version": "1.0.0",
   "description": "",
-  "main": "dist/server.js",
+  "main": "build/src/server.js",
   "prisma": {
     "seed": "ts-node prisma/seed.ts"
   },
   "scripts": {
-    "develop": "dotenv -e ../.env -- npx ts-node-dev --rs --clear --exit-child src/server.ts",
-    "build": "dotenv -e ../.env -- npx tsc",
-    "start": "dotenv -e src/.env npx ts-node-dev src/server.ts",
-    "migrate:create": "dotenv -e ../.env -- npx prisma migrate dev --name init"
+    "start": "dotenv -e src/.env -- npx node build/server.js",
+    "build": "dotenv -e src/.env -- tsc --project tsconfig.json && tsc-alias -p tsconfig.json",
+    "clean": "dotenv -e src/.env -- tsc --build --clean",
+    "dev": "dotenv -e src/.env -- npx ts-node src/server.ts",
+    "migrate:create": "dotenv -e src/.env -- npx prisma migrate dev --name init"
   },
   "dependencies": {
     "@prisma/client": "^5.6.0",
@@ -33,6 +34,7 @@
     "prisma": "^5.6.0",
     "ts-node": "^10.9.1",
     "ts-node-dev": "^2.0.0",
+    "tsc-alias": "^1.8.8",
     "typescript": "^5.3.2"
   },
   "_moduleAliases": {
