--- a/server/package.json
+++ b/server/package.json
@@ -20,11 +20,15 @@
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "dotenv-cli": "^7.3.0",
+    "googleapis": "^134.0.0",
+    "hash-it": "^6.0.0",
     "hyper-express": "^6.14.3",
     "hyper-express-session": "^1.1.5",
     "jsonwebtoken": "^9.0.2",
     "live-directory": "^3.0.3",
-    "module-alias": "^2.2.3"
+    "module-alias": "^2.2.3",
+    "nodemailer": "^6.9.12",
+    "simple-oauth2": "^5.0.0"
   },
   "devDependencies": {
     "@types/bcrypt": "^5.0.2",
